dialog box added and new font added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:screenOrientation="fullSensor"
+            android:turnScreenOn="true"
             android:theme="@style/Theme.SpeedoMeter">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
