Floating Button added Font Color of Speed TV Settings Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- Include only if your app benefits from precise location access. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
@@ -20,6 +23,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SpeedoMeter"
         tools:targetApi="31">
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings" />
+
+        <service
+            android:name=".service.NewForegroundService"
+            android:enabled="true"
+            android:foregroundServiceType="location">
+        </service>
         <activity
             android:name=".SplashActivity"
             android:exported="true">
@@ -35,8 +48,7 @@
             android:screenOrientation="userPortrait"
             android:theme="@style/Theme.SpeedoMeter"
             android:turnScreenOn="true"
-            tools:ignore="LockedOrientationActivity">
-        </activity>
+            tools:ignore="LockedOrientationActivity" />
     </application>
 
 </manifest>
