--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
+//    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -9,7 +11,7 @@ android {
         applicationId "com.chahal.speedometer"
         minSdk 26
         targetSdk 32
-        versionCode 6
+        versionCode 7
         versionName "1.03"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -43,6 +45,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
     implementation 'androidx.preference:preference:1.2.0'
+//    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.11'
+//    implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
