--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
 
         <service
             android:name=".service.NewForegroundService"
+            android:exported="false"
+            android:enabled="true"
             android:foregroundServiceType="location" />
 
         <activity
