--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
-//    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -11,8 +10,8 @@ android {
         applicationId "com.chahal.speedometer"
         minSdk 26
         targetSdk 32
-        versionCode 8
-        versionName "1.03"
+        versionCode 13
+        versionName "1.04"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     testFixtures {
@@ -45,9 +44,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
     implementation 'androidx.preference:preference:1.2.0'
-//    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.11'
-//    implementation 'com.google.firebase:firebase-analytics-ktx:21.0.0'
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'com.google.android.gms:play-services-ads:21.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
