--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,11 +56,10 @@
         <activity
             android:name=".activity.MainActivity"
             android:exported="true"
-            android:screenOrientation="userPortrait"
+            android:screenOrientation="fullSensor"
             android:theme="@style/Theme.SpeedoMeter"
             android:turnScreenOn="true"
-            android:hardwareAccelerated="true"
-            tools:ignore="LockedOrientationActivity" />
+            android:hardwareAccelerated="true" />
     </application>
 
 </manifest>
